fix: modal spacing

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -38,10 +38,14 @@
 #modal #modal-title-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+#modal #modal-title {
+  margin: 0;
 }
 
 @media screen and (max-width: 400px) {
